--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Dr. Veerendra C Angadi"
 title_separator          : "-"
 name                     : &name "Dr. Veerendra C Angadi"
 description              : &description "Research Fellow at Brunel University London"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Veer-Angadi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Veer-Angadi.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -87,10 +87,10 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.co.uk/citations?user=pU0oRtUAAAAJ&hl=en"
-  email            :
+  email            : "Veer.Angadi@brunel.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Veerendra_Angadi"
   uri              :
-  bitbucket        :
+  bitbucket        : "vcangadi1"
   codepen          :
   dribbble         :
   flickr           :
@@ -102,7 +102,7 @@ author:
   instagram        : "veersaysit"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/veerendra-c-angadi-96507551/"
   orcid            : "https://orcid.org/0000-0002-0538-4483"
   pinterest        :
   soundcloud       :
