--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Dr. Veerendra C Angadi"
 title_separator          : "-"
 name                     : &name "Dr. Veerendra C Angadi"
 description              : &description "Research Fellow at Brunel University London"
-url                      : https://Veer-Angadi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://vcangadi1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Veer-Angadi.github.io"
+repository               : "vcangadi1.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
