--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.co.uk/citations?user=pU0oRtUAAAAJ&hl=en"
   email            : "Veer.Angadi@brunel.ac.uk"
-  researchgate     : "https://www.researchgate.net/profile/Veerendra_Angadi"
+  researchgate     : #"https://www.researchgate.net/profile/Veerendra_Angadi"
   uri              :
   bitbucket        : "vcangadi1"
   codepen          :
@@ -99,7 +99,7 @@ author:
   github           : "vcangadi1"
   google_plus      :
   keybase          :
-  instagram        : "veersaysit"
+  instagram        : #"veersaysit"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/veerendra-c-angadi-96507551/"
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "veersaysit"
+  twitter          : #"veersaysit"
   vine             :
   weibo            :
   xing             :
