profile.jpg update

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Veerendra C Angadi"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Research Fellow at Brunel University London"
   location         : "London, UK"
   employer         :
