--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Veerendra C Angadi"
+  name             : "Veerendra C. Angadi"
   avatar           : "profile.png"
   bio              : "Research Fellow at Brunel University London"
   location         : "London, UK"
