--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,9 @@
 # main links links
 main:
+
+  - title: "Profile"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
@@ -11,12 +15,9 @@ main:
     
   #- title: "Portfolio"
   #  url: /portfolio/
-        
+
   #- title: "Blog Posts"
   #  url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
+
   #- title: "Guide"
   #  url: /markdown/
