up to date publications

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "V.C. Angadi"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "Veer.Angadi@brunel.ac.uk"
   bio         : "This is the first name."
-  avatar      : "bio-photo.jpg"
+  avatar      : "profile.png"
   twitter     : "name"
   google_plus : "Name"
 
