update profile status

--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,12 @@ analytics:
 author:
   name             : "Veerendra C. Angadi"
   avatar           : "profile.png"
-  bio              : "Research Fellow at Brunel University London"
-  location         : "London, UK"
+  bio              : "Technology Transfer Engineer (SME) at WMG, University of Warwick"
+  location         : "Coventry, UK"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.co.uk/citations?user=pU0oRtUAAAAJ&hl=en"
-  email            : "Veer.Angadi@brunel.ac.uk"
+  email            : "Veer.Angadi@warwick.ac.uk"
   researchgate     : #"https://www.researchgate.net/profile/Veerendra_Angadi"
   uri              :
   bitbucket        : "vcangadi1"
@@ -106,7 +106,7 @@ author:
   instagram        : #"veersaysit"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/veerendra-c-angadi-96507551/"
+  linkedin         : "https://www.linkedin.com/in/veerangadi/"
   orcid            : "https://orcid.org/0000-0002-0538-4483"
   pinterest        :
   soundcloud       :
