--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   instagram        : #"veersaysit"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/veerangadi/"
+  linkedin         : "veerangadi"
   orcid            : "https://orcid.org/0000-0002-0538-4483"
   pinterest        :
   soundcloud       :
